create: home page location modal

--- a/about-us.html
+++ b/about-us.html
@@ -1,142 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>about us</title>
     <link href="./dist/styles.css" rel="stylesheet" />
+  </head>
 
-</head>
-
-<body class="max-w-[600px] mx-auto px-[15px]">
-
+  <body class="max-w-[600px] mx-auto px-[15px]">
     <div class="w-[72%]">
-        <img src="./image/megapersonalsPageHeader--alt.png" alt="">
+      <img src="./image/megapersonalsPageHeader--alt.png" alt="" />
     </div>
     <div>
-        <h2 class="text-[23px] mt-[20px] mb-[10px] font-[sans-serif] font-medium text-[#333]">ABOUT US...</h2>
-        <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">MegaPersonals is committed to
-            building
-            websites and
-            platforms that
-            allow
-            adults to publish
-            personal
-            classified postings. This allows them to connect with other like minded adults and go on dates, if they so
-            choose. We are sex worker positive; as sex work is real work. One of the oldest professions in fact.
-            Individual liberty between safe and consenting adults is key. Sex work must be de-stigmatized and
-            de-criminalised.
+      <h2 class="text-[23px] mt-[20px] mb-[10px] font-[sans-serif] font-medium text-[#333]">ABOUT US...</h2>
+      <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">
+        MegaPersonals is committed to building websites and platforms that allow adults to publish personal classified
+        postings. This allows them to connect with other like minded adults and go on dates, if they so choose. We are
+        sex worker positive; as sex work is real work. One of the oldest professions in fact. Individual liberty between
+        safe and consenting adults is key. Sex work must be de-stigmatized and de-criminalised.
+      </p>
+      <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">
+        MegaPersonals is part of the Babylon Network of affiliated sites, which also include: Listcrawler.eu and
+        EscortBabylon.net
+      </p>
+      <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">
+        The website and platforms are strictly for adults (18+). All our members are required to complete an age
+        verification process, with the help of our partner AgeSmart.eu. This service costs a one-time service fee of
+        approximately $20 for each new accounts. All the posts on our websites are written and published by our members.
+        We do our best to ensure that nothing abusive is ever published, with regular reviewing of content. If you are
+        aware of anything currently abusive visible on our website, please let us know – by contacting us here.
+      </p>
+      <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">
+        We are constantly at war with scammers who attempt to create fake profiles on our websites to defraud our users
+        out of personal information and money. Damn them! The only real MegaPersonals, is MegaPersonals.eu. All others
+        are scam sites. We will never contact you through SMS/TEXT messages threatening you with loss of your account,
+        send you a link or ask for your password. The same goes for emails.
+      </p>
 
-        </p>
-        <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">MegaPersonals is part of the
-            Babylon Network of affiliated sites, which also include: Listcrawler.eu and EscortBabylon.net
-        </p>
-        <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">The website and platforms are
-            strictly for adults (18+). All our members are required to complete an age verification process, with the
-            help of our partner AgeSmart.eu. This service costs a one-time service fee of approximately $20 for each new
-            accounts. All the posts on our websites are written and published by our members. We do our best to ensure
-            that nothing abusive is ever published, with regular reviewing of content. If you are aware of anything
-            currently abusive visible on our website, please let us know – by contacting us here.
-        </p>
-        <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">We are constantly at war with
-            scammers who attempt to create fake profiles on our websites to defraud our users out of personal
-            information and money. Damn them! The only real MegaPersonals, is MegaPersonals.eu. All others are scam
-            sites. We will never contact you through SMS/TEXT messages threatening you with loss of your account, send
-            you a link or ask for your password. The same goes for emails.
-        </p>
+      <ul style="list-style-type: disc" class="mb-[10px] pl-10">
+        <li class="text-[14px] text-[#333] leading-[1.4]">
+          Our contact forms on <strong class="text-[#a20092] hover:underline">MegaPersonals.eu</strong>
+        </li>
+        <li class="text-[14px] text-[#333] leading-[1.4]">
+          Emails FROM:
+          <a href="mailto:support@megapersonals.eu" class="text-[#0000EE] text-[14px] hover:underline"
+            >support@megapersonals.eu</a
+          >
+        </li>
+        <li class="text-[14px] text-[#333] leading-[1.4]">
+          On BlueSky our profile is
+          <a href="https://bsky.app/profile/megapersonals.eu" class="text-[#0000EE] text-[14px] hover:underline"
+            >@megapersonals.eu</a
+          >
+        </li>
+        <li class="text-[14px] text-[#333] leading-[1.4]">
+          On Twitter / X we are profile
+          <a href="https://twitter.com/Mega_Personals" class="text-[#0000EE] text-[14px] hover:underline"
+            >@Mega_Personals</a
+          >
+        </li>
+        <li class="text-[14px] text-[#333] leading-[1.4]">
+          On Reddit we are
+          <a href="https://www.reddit.com/user/MegaPersonals_REAL" class="text-[#0000EE] text-[14px] hover:underline"
+            >u/MegaPersonals_REAL</a
+          >
+        </li>
+        <li class="text-[14px] text-[#333] leading-[1.4]">
+          On Instagram we are
+          <a href="https://www.instagram.com/megapersonals_official" class="text-[#0000EE] text-[14px] hover:underline"
+            >@megapersonals_official</a
+          >
+        </li>
+      </ul>
 
-        <ul style="list-style-type: disc;" class="mb-[10px] pl-10">
-            <li class="text-[14px] text-[#333] leading-[1.4]">Our contact forms on <strong
-                    class="text-[#a20092] hover:underline">MegaPersonals.eu</strong>
-            </li>
-            <li class="text-[14px] text-[#333] leading-[1.4]">Emails FROM: <a href="mailto:support@megapersonals.eu"
-                    class="text-[#0000EE] text-[14px] hover:underline">support@megapersonals.eu</a></li>
-            <li class="text-[14px] text-[#333] leading-[1.4]">On BlueSky our profile is <a
-                    href="https://bsky.app/profile/megapersonals.eu"
-                    class="text-[#0000EE] text-[14px] hover:underline">@megapersonals.eu</a></li>
-            <li class="text-[14px] text-[#333] leading-[1.4]">On Twitter / X we are profile <a
-                    href="https://twitter.com/Mega_Personals"
-                    class="text-[#0000EE] text-[14px] hover:underline">@Mega_Personals</a>
-            </li>
-            <li class="text-[14px] text-[#333] leading-[1.4]">On Reddit we are <a
-                    href="https://www.reddit.com/user/MegaPersonals_REAL"
-                    class="text-[#0000EE] text-[14px] hover:underline">u/MegaPersonals_REAL</a></li>
-            <li class="text-[14px] text-[#333] leading-[1.4]">On Instagram we are <a
-                    href="https://www.instagram.com/megapersonals_official"
-                    class="text-[#0000EE] text-[14px] hover:underline">@megapersonals_official</a></li>
-        </ul>
+      <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">
+        Our member support team is dedicated to helping our legitimate members maintain their account. While also wiping
+        out scammers as quickly as possible. These are the ONLY real channels to communicate with them:
+      </p>
 
-        <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">Our member support team is
-            dedicated to helping our legitimate members maintain their account. While also wiping out scammers as
-            quickly as possible. These are the ONLY real channels to communicate with them:
-        </p>
-
-        <div class="grid md:grid-cols-2 grid-cols-1">
-            <div class="flex items-start">
-                <img src="./image/p1.png" class="w-[114px] h-auto" alt="">
-                <div class="px-[10px] pb-[10px]">
-                    <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Titania</h3>
-                    <h5 class="text-[#94B2C0] text-[12px] italic">Managing Director</h5>
-                    <p class="text-[12px] text-[#333]">Liberty for consenting adults! Despise the scammers!
-                        De-stigmatise,
-                        de-criminalise. Love my
-                        team. Feel blessed!</p>
-                </div>
-            </div>
-            <div class="flex items-start">
-                <img src="./image/p1.png" class="w-[114px] h-auto" alt="">
-                <div class="px-[10px] pb-[10px]">
-                    <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Patsak</h3>
-                    <h5 class="text-[#94B2C0] text-[12px] italic">Chief Engineer</h5>
-                    <p class="text-[12px] text-[#333]">I enjoy building great software for this community.
-                    </p>
-                </div>
-            </div>
-            <div class="flex items-start">
-                <img src="./image/p1.png" class="w-[114px] h-auto" alt="">
-                <div class="px-[10px] pb-[10px]">
-                    <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Brooke Frost</h3>
-                    <h5 class="text-[#94B2C0] text-[12px] italic">Chief Support Priestess</h5>
-                    <p class="text-[12px] text-[#333]">Kindness with an edge. Friendly by nature; fierce by necessity.
-                        Supporting team collaboration for collective success. Compassion with a hint of venom.
-                    </p>
-                </div>
-            </div>
-            <div class="flex items-start">
-                <img src="./image/p1.png" class="w-[114px] h-auto" alt="">
-                <div class="px-[10px] pb-[10px]">
-                    <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Violet Langridge</h3>
-                    <h5 class="text-[#94B2C0] text-[12px] italic">Support Champion</h5>
-                    <p class="text-[12px] text-[#333]">I believe in the work I do and aim to make your day better, one
-                        interaction at a time.
-                    </p>
-                </div>
-            </div>
+      <div class="grid md:grid-cols-2 grid-cols-1 md:gap-0 gap-3">
+        <div class="flex items-start">
+          <img src="./image/p1.png" class="w-[114px] h-auto" alt="" />
+          <div class="px-[10px] pb-[10px]">
+            <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Titania</h3>
+            <h5 class="text-[#94B2C0] text-[12px] italic">Managing Director</h5>
+            <p class="text-[12px] text-[#333]">
+              Liberty for consenting adults! Despise the scammers! De-stigmatise, de-criminalise. Love my team. Feel
+              blessed!
+            </p>
+          </div>
         </div>
-        <div class="flex justify-center">
-            <button class="bg-[#33C8FF] text-white py-[6px] px-[18px] rounded-[18px] text-[16px]">BACK</button>
+        <div class="flex items-start">
+          <img src="./image/p1.png" class="w-[114px] h-auto" alt="" />
+          <div class="px-[10px] pb-[10px]">
+            <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Patsak</h3>
+            <h5 class="text-[#94B2C0] text-[12px] italic">Chief Engineer</h5>
+            <p class="text-[12px] text-[#333]">I enjoy building great software for this community.</p>
+          </div>
         </div>
-
-
+        <div class="flex items-start">
+          <img src="./image/p1.png" class="w-[114px] h-auto" alt="" />
+          <div class="px-[10px] pb-[10px]">
+            <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Brooke Frost</h3>
+            <h5 class="text-[#94B2C0] text-[12px] italic">Chief Support Priestess</h5>
+            <p class="text-[12px] text-[#333]">
+              Kindness with an edge. Friendly by nature; fierce by necessity. Supporting team collaboration for
+              collective success. Compassion with a hint of venom.
+            </p>
+          </div>
+        </div>
+        <div class="flex items-start">
+          <img src="./image/p1.png" class="w-[114px] h-auto" alt="" />
+          <div class="px-[10px] pb-[10px]">
+            <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Violet Langridge</h3>
+            <h5 class="text-[#94B2C0] text-[12px] italic">Support Champion</h5>
+            <p class="text-[12px] text-[#333]">
+              I believe in the work I do and aim to make your day better, one interaction at a time.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="flex justify-center">
+        <button class="bg-[#33C8FF] text-white py-[6px] px-[18px] rounded-[18px] text-[16px]">BACK</button>
+      </div>
     </div>
 
     <footer class="pb-[32px]">
-        <div class="my-[20px] text-center">
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="/about-us">About Us</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Contact Us</a>
-            <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a>
-            </div>
-        </div>
+      <div class="my-[20px] text-center">
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="/about-us">About Us</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Contact Us</a>
+        <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a></div>
+      </div>
 
-        <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
+      <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
     </footer>
-
-</body>
-
+  </body>
 </html>
