--- a/post-list.html
+++ b/post-list.html
@@ -11,7 +11,7 @@
     />
   </head>
 
-  <body class="max-w-[600px] mx-auto relative bg-[#fbfef9]">
+  <body class="max-w-[600px] md:px-[15px] px-[10px] mx-auto relative bg-[#fbfef9]">
     <div class="flex items-end justify-end mt-[19px]">
       <img src="./image/megapersonalsPageHeader2.png" class="max-w-[366px]" alt="" />
     </div>
