--- a/index.html
+++ b/index.html
@@ -9,6 +9,59 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <style>
+      /* Modal Styles */
+      .modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+        justify-content: center;
+        align-items: center;
+        overflow-y: auto;
+        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3), 0px 10px 10px rgba(0, 0, 0, 0.2);
+      }
+
+      .modal-content {
+        background: white;
+        border-radius: 8px;
+        width: 90%;
+        max-width: 400px;
+        max-height: 100%;
+        overflow-y: auto;
+        padding: 15px;
+      }
+      .close-btn {
+        background: #ff5c5c;
+        color: white;
+        padding: 5px 10px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        float: right;
+      }
+      .location-list {
+        margin-top: 10px;
+      }
+      .location-item {
+        margin-bottom: 10px;
+        cursor: pointer;
+      }
+      .sub-location,
+      .sub-sub-location {
+        display: none;
+      }
+      .selected-location {
+        text-align: center;
+        font-size: 16px;
+        margin-top: 10px;
+        color: #007bff;
+      }
+    </style>
   </head>
 
   <body class="max-w-[600px] mx-auto px-[15px]">
@@ -19,13 +72,19 @@
           <a
             href=""
             style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.36)"
-            class="bg-[#58c2fd] text-[#fff] px-[2px] py-[4px] text-[18px] rounded-[5px] w-[85%] text-center font-bold"
+            class="bg-[#58c2fd] text-[#fff] px-[2px] py-[4px] md:text-[18px] text-[12px] rounded-[5px] w-[85%] text-center font-bold md:mt-0 -mt-5"
             >POST NOW</a
           >
         </div>
         <div class="w-[90%]">
-          <h6 class="text-[#810107] cursor-pointer text-[14px] font-bold mt-[4px] text-center">Select location</h6>
-          <h5 class="cursor-pointer text-[#fcb9e3] text-[13px] underline font-bold mb-[12px] text-center">
+          <h6
+            class="text-[#810107] cursor-pointer text-[14px] font-bold mt-[4px] text-center"
+            id="selectedLocation"
+          ></h6>
+          <h5
+            id="openModalBtn"
+            class="cursor-pointer text-[#fcb9e3] text-[13px] underline font-bold mb-[12px] text-center"
+          >
             change location
           </h5>
           <img src="./image/topLeftFlowers_trans.png" alt="model-image" />
@@ -35,10 +94,14 @@
         <img src="./image/megapersonalsPageHeader2.png" alt="model-image" />
         <img class="my-[10px]" src="./image/meetnow.png" alt="model-image" />
         <div>
-          <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">MegaPersonals is restricted to</p>
-          <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">persons 18 years of age or older*</p>
+          <p class="text-center text-[#dcd1b1] font-bold md:text-[20px] text-[13px] italic">
+            MegaPersonals is restricted to
+          </p>
+          <p class="text-center text-[#dcd1b1] font-bold md:text-[20px] text-[13px] italic">
+            persons 18 years of age or older*
+          </p>
         </div>
-        <div class="w-full mt-[4rem]">
+        <div class="w-full md:mt-[4rem] mt-[1rem]">
           <button
             style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
             class="bg-[#c75400] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"
@@ -80,6 +143,93 @@
         for people wanting to <strong class="text-[#21d42b]">MEET NOW!</strong>
       </p>
     </div>
+
+    <div id="locationModal" class="modal overflow-y-scroll h-[10vh]">
+      <div class="modal-content px-[10px] pt-[3px] pb-[12px] relative !shadow-xl">
+        <button class="absolute top-0 right-0 z-[1050]" id="closeModalBtn">
+          <img src="./image/close.png" class="w-[27px]" alt="Close" />
+        </button>
+
+        <h2 class="my-[13px] text-[#00cbff] font-bold text-[19.6px] text-center">Choose a Location</h2>
+        <div class="location-list">
+          <div class="location-item">
+            <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Canada</h3>
+            <div class="sub-location">
+              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
+                Alberta
+              </h4>
+              <div class="sub-sub-location">
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
+              </div>
+            </div>
+          </div>
+          <div class="location-item">
+            <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">
+              United States
+            </h3>
+            <div class="sub-location">
+              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
+                British Columbia
+              </h4>
+              <div class="sub-sub-location">
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
+              </div>
+            </div>
+          </div>
+          <div class="location-item">
+            <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Europe</h3>
+            <div class="sub-location">
+              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
+                Manitoba
+              </h4>
+              <div class="sub-sub-location">
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
+              </div>
+            </div>
+          </div>
+          <div class="location-item">
+            <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Oceania</h3>
+            <div class="sub-location">
+              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
+                New Brunswick
+              </h4>
+              <div class="sub-sub-location">
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
+              </div>
+            </div>
+          </div>
+          <div class="location-item">
+            <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Oceania</h3>
+            <div class="sub-location">
+              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
+                New Brunswick
+              </h4>
+              <div class="sub-sub-location">
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
+              </div>
+            </div>
+          </div>
+          <div class="location-item">
+            <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Oceania</h3>
+            <div class="sub-location">
+              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
+                New Brunswick
+              </h4>
+              <div class="sub-sub-location">
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
+                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer class="pb-[32px]">
       <div class="my-[20px] text-center">
         <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a>
@@ -96,5 +246,59 @@
 
       <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
     </footer>
+
+    <script>
+      // JavaScript for Modal and Location Selection
+      const openModalBtn = document.getElementById("openModalBtn");
+      const closeModalBtn = document.getElementById("closeModalBtn");
+      const modal = document.getElementById("locationModal");
+      const selectedLocationP = document.getElementById("selectedLocation");
+
+      // Check if a location is selected on page load
+      window.addEventListener("load", () => {
+        if (!selectedLocationP.textContent.trim()) {
+          modal.style.display = "flex";
+        }
+      });
+
+      openModalBtn.addEventListener("click", () => {
+        modal.style.display = "flex";
+      });
+
+      closeModalBtn.addEventListener("click", () => {
+        modal.style.display = "none";
+      });
+
+      // Expand/Collapse Sub-locations
+      document.querySelectorAll(".location-item").forEach((item) => {
+        item.addEventListener("click", (e) => {
+          e.stopPropagation();
+          const subLocation = item.querySelector(".sub-location");
+          if (subLocation) {
+            subLocation.style.display = subLocation.style.display === "block" ? "none" : "block";
+          }
+        });
+      });
+
+      document.querySelectorAll(".sub-location").forEach((subItem) => {
+        subItem.addEventListener("click", (e) => {
+          e.stopPropagation();
+          const subSubLocation = subItem.querySelector(".sub-sub-location");
+          if (subSubLocation) {
+            subSubLocation.style.display = subSubLocation.style.display === "block" ? "none" : "block";
+          }
+        });
+      });
+
+      // Handle Location Selection
+      document.querySelectorAll(".selectable").forEach((location) => {
+        location.addEventListener("click", (e) => {
+          e.stopPropagation();
+          const selectedLocation = location.textContent;
+          selectedLocationP.textContent = ` ${selectedLocation}`;
+          modal.style.display = "none";
+        });
+      });
+    </script>
   </body>
 </html>
