fix: modal style

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
         z-index: 1000;
         justify-content: center;
         align-items: center;
-        overflow-y: auto;
-        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3), 0px 10px 10px rgba(0, 0, 0, 0.2);
+        box-shadow: rgb(0, 0, 0) 0px 7px 15px 0px;
       }
-
       .modal-content {
         background: white;
-        border-radius: 8px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 3px;
+        padding-bottom: 12px;
+        border-radius: 14px;
         width: 90%;
-        max-width: 400px;
-        max-height: 100%;
-        overflow-y: auto;
-        padding: 15px;
+        max-width: 315px;
+        box-shadow: rgb(0, 0, 0) 0px 7px 15px 0px;
       }
       .close-btn {
         background: #ff5c5c;
@@ -44,11 +44,7 @@
         cursor: pointer;
         float: right;
       }
-      .location-list {
-        margin-top: 10px;
-      }
       .location-item {
-        margin-bottom: 10px;
         cursor: pointer;
       }
       .sub-location,
@@ -72,7 +68,7 @@
           <a
             href=""
             style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.36)"
-            class="bg-[#58c2fd] text-[#fff] px-[2px] py-[4px] md:text-[18px] text-[12px] rounded-[5px] w-[85%] text-center font-bold md:mt-0 -mt-5"
+            class="bg-[#58c2fd] text-[#fff] px-[2px] py-[4px] text-[18px] rounded-[5px] w-[85%] text-center font-bold"
             >POST NOW</a
           >
         </div>
@@ -94,14 +90,10 @@
         <img src="./image/megapersonalsPageHeader2.png" alt="model-image" />
         <img class="my-[10px]" src="./image/meetnow.png" alt="model-image" />
         <div>
-          <p class="text-center text-[#dcd1b1] font-bold md:text-[20px] text-[13px] italic">
-            MegaPersonals is restricted to
-          </p>
-          <p class="text-center text-[#dcd1b1] font-bold md:text-[20px] text-[13px] italic">
-            persons 18 years of age or older*
-          </p>
+          <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">MegaPersonals is restricted to</p>
+          <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">persons 18 years of age or older*</p>
         </div>
-        <div class="w-full md:mt-[4rem] mt-[1rem]">
+        <div class="w-full mt-[4rem]">
           <button
             style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
             class="bg-[#c75400] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"
@@ -144,20 +136,22 @@
       </p>
     </div>
 
-    <div id="locationModal" class="modal overflow-y-scroll h-[10vh]">
-      <div class="modal-content px-[10px] pt-[3px] pb-[12px] relative !shadow-xl">
-        <button class="absolute top-0 right-0 z-[1050]" id="closeModalBtn">
-          <img src="./image/close.png" class="w-[27px]" alt="Close" />
+    <div id="locationModal" class="modal">
+      <div class="modal-content relative">
+        <button class="absolute -top-3 -right-3" id="closeModalBtn">
+          <img src="./image/close.png" class="w-[27px]" alt="" />
         </button>
-
         <h2 class="my-[13px] text-[#00cbff] font-bold text-[19.6px] text-center">Choose a Location</h2>
         <div class="location-list">
           <div class="location-item">
-            <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Canada</h3>
+            <h3 class="bg-[#f9a51c] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Canada</h3>
             <div class="sub-location">
-              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
-                Alberta
-              </h4>
+              <div
+                class="my-[6px] bg-[#00cbff] hover:bg-[#aae3f1] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px] flex items-center justify-between"
+              >
+                <p>Alberta</p>
+                <p class="font-bold">+</p>
+              </div>
               <div class="sub-sub-location">
                 <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
                 <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
@@ -165,13 +159,16 @@
             </div>
           </div>
           <div class="location-item">
-            <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">
+            <h3 class="bg-[#f9a51c] mt-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">
               United States
             </h3>
             <div class="sub-location">
-              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
-                British Columbia
-              </h4>
+              <div
+                class="my-[6px] bg-[#00cbff] hover:bg-[#aae3f1] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px] flex items-center justify-between"
+              >
+                <p>British Columbia</p>
+                <p class="font-bold">+</p>
+              </div>
               <div class="sub-sub-location">
                 <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
                 <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
@@ -179,35 +176,14 @@
             </div>
           </div>
           <div class="location-item">
-            <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Europe</h3>
+            <h3 class="bg-[#f9a51c] mt-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Europe</h3>
             <div class="sub-location">
-              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
-                Manitoba
-              </h4>
-              <div class="sub-sub-location">
-                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
-                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
+              <div
+                class="my-[6px] bg-[#00cbff] hover:bg-[#aae3f1] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px] flex items-center justify-between"
+              >
+                <p>Manitoba</p>
+                <p class="font-bold">+</p>
               </div>
-            </div>
-          </div>
-          <div class="location-item">
-            <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Oceania</h3>
-            <div class="sub-location">
-              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
-                New Brunswick
-              </h4>
-              <div class="sub-sub-location">
-                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
-                <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
-              </div>
-            </div>
-          </div>
-          <div class="location-item">
-            <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Oceania</h3>
-            <div class="sub-location">
-              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
-                New Brunswick
-              </h4>
               <div class="sub-sub-location">
                 <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
                 <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
@@ -217,9 +193,12 @@
           <div class="location-item">
             <h3 class="bg-[#f9a51c] my-[6px] p-[11px] rounded-[8px] text-[22.4px] font-bold text-white">Oceania</h3>
             <div class="sub-location">
-              <h4 class="my-[6px] bg-[#00cbff] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px]">
-                New Brunswick
-              </h4>
+              <div
+                class="my-[6px] bg-[#00cbff] hover:bg-[#aae3f1] text-[18.2px] text-white px-[18.2px] py-[5.4px] rounded-[6px] flex items-center justify-between"
+              >
+                <p>New Brunswick</p>
+                <p class="font-bold">+</p>
+              </div>
               <div class="sub-sub-location">
                 <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">Alberta</p>
                 <p class="selectable mt-[6px] mb-[4px] text-[#726b28] text-[16px] font-bold ml-6">British Columbia</p>
