--- a/about-us.html
+++ b/about-us.html
@@ -7,12 +7,12 @@
     <link href="./dist/styles.css" rel="stylesheet" />
   </head>
 
-  <body class="max-w-[600px] mx-auto px-[15px]">
+  <body class="max-w-[600px] mx-auto px-[15px] bg-[#fbfef9]">
     <div class="w-[72%]">
       <img src="./image/megapersonalsPageHeader--alt.png" alt="" />
     </div>
     <div>
-      <h2 class="text-[23px] mt-[20px] mb-[10px] font-[sans-serif] font-medium text-[#333]">ABOUT US...</h2>
+      <h2 class="text-[23px] mt-[15px] mb-[10px] font-[sans-serif] font-medium text-[#333]">ABOUT US...</h2>
       <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">
         MegaPersonals is committed to building websites and platforms that allow adults to publish personal classified
         postings. This allows them to connect with other like minded adults and go on dates, if they so choose. We are
@@ -20,15 +20,18 @@
         safe and consenting adults is key. Sex work must be de-stigmatized and de-criminalised.
       </p>
       <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">
-        MegaPersonals is part of the Babylon Network of affiliated sites, which also include: Listcrawler.eu and
-        EscortBabylon.net
+        MegaPersonals is part of the <a href="https://babylonnetwork.org/" class="text-[#a20092]">Babylon Network</a> of
+        affiliated sites, which also include:
+        <a href="https://listcrawler.eu/" class="text-[#337ab7]" target="_blank">Listcrawler.eu</a> and
+        <a href="https://escortbabylon.net/cities_list" target="_blank" class="text-[#337ab7]">EscortBabylon.net</a>
       </p>
       <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">
         The website and platforms are strictly for adults (18+). All our members are required to complete an age
         verification process, with the help of our partner AgeSmart.eu. This service costs a one-time service fee of
         approximately $20 for each new accounts. All the posts on our websites are written and published by our members.
         We do our best to ensure that nothing abusive is ever published, with regular reviewing of content. If you are
-        aware of anything currently abusive visible on our website, please let us know – by contacting us here.
+        aware of anything currently abusive visible on our website, please let us know – by
+        <a href="/contact.html" target="_blank" class="text-[#a20092]">contacting us here.</a>
       </p>
       <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">
         We are constantly at war with scammers who attempt to create fake profiles on our websites to defraud our users
