--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </head>
 
   <body class="max-w-[600px] mx-auto px-[15px]">
-    <div class="mt-[25px] grid grid-cols-12">
+    <div class="mt-[20px] grid grid-cols-12">
       <div class="col-span-4">
         <img src="./image/devilgirl.png" alt="model-image" />
         <div class="items-center flex mx-auto mb-[9px] pl-[15px]">
@@ -93,7 +93,7 @@
           <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">MegaPersonals is restricted to</p>
           <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">persons 18 years of age or older*</p>
         </div>
-        <div class="w-full mt-[4rem]">
+        <div class="w-full mt-[54px]">
           <button
             style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
             class="bg-[#c75400] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"
