--- a/treams.html
+++ b/treams.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Treams</title>
     <link href="./dist/styles.css" rel="stylesheet" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
-        rel="stylesheet" />
-</head>
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body class="max-w-[600px] mx-auto px-[15px]">
-
+  <body class="max-w-[600px] mx-auto px-[15px]">
     <div class="w-[72%] mx-auto mt-3">
-        <img src="./image/megapersonalsPageHeader 1.png" alt="">
+      <img src="./image/megapersonalsPageHeader 1.png" class="h-[82.9px]" alt="" />
     </div>
     <div class="py-[20px]">
-        <h4 class="text-center text-[18px] underline text-[#333] font-bold my-[8px]">Megapersonals Terms & Policies
-        </h4>
-        <h6 class="hover:underline text-[#337ab7] text-center mb-[8px]"><a href="treamsOfUse.html">Terms of Use</a></h6>
-        <h6 class="hover:underline text-[#337ab7] text-center mb-[8px]"><a href="subpoenas.html">Subpoenas</a></h6>
-        <h6 class="hover:underline text-[#337ab7] text-center mb-[8px]"><a href="privacy-policy.html">Privacy Policy</a>
-        </h6>
+      <h4 class="text-center text-[18px] underline text-[#333] font-bold my-[8px]">Megapersonals Terms & Policies</h4>
+      <h6 class="hover:underline text-[#337ab7] text-center mb-[8px]"><a href="treamsOfUse.html">Terms of Use</a></h6>
+      <h6 class="hover:underline text-[#337ab7] text-center mb-[8px]"><a href="subpoenas.html">Subpoenas</a></h6>
+      <h6 class="hover:underline text-[#337ab7] text-center mb-[8px]">
+        <a href="privacy-policy.html">Privacy Policy</a>
+      </h6>
     </div>
 
-    <footer class="pt-[20px] ">
-        <div class="my-[20px] text-center ">
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="contact.html">Contact Us</a>
-            <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a>
-            </div>
-        </div>
+    <footer class="pt-[20px]">
+      <div class="my-[20px] text-center">
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="contact.html">Contact Us</a>
+        <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a></div>
+      </div>
     </footer>
-
-</body>
-
+  </body>
 </html>
