create: 3 new design

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     />
   </head>
 
-  <body class="max-w-[600px] mx-auto px-[15px]">
+  <body class="max-w-[600px] mx-auto px-[15px] bg-[#fbfef9]">
     <div class="w-[72%] mx-auto mt-[38px]">
       <img src="./image/megapersonalsPageHeader 1.png" alt="" />
     </div>
