--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,70 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy</title>
     <link href="./dist/styles.css" rel="stylesheet" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
-        rel="stylesheet" />
-</head>
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body class="max-w-[600px] mx-auto px-[15px]">
+  <body class="max-w-[600px] mx-auto px-[15px] bg-[#fbfef9]">
     <div class="w-[72%] mx-auto mt-3">
-        <img src="./image/megapersonalsPageHeader 1.png" alt="">
+      <img src="./image/megapersonalsPageHeader 1.png" alt="" />
     </div>
     <div class="pt-[25px]">
-
-        <h2 class="mt-[20px] mb-[10px]  text-[30px] text-[#6a6969] font-bold text-center">Privacy Policy</h2>
-        <h4 class="mb-[10px] text-[#333] text-[14px ] font-bold">Last Updated: Apr 30, 2024</h4>
-        <h4 class="mb-[10px] text-[#333] text-[14px ] font-bold">Introduction</h4>
-        <h4 class="mb-[10px] text-[#333] text-[14px ] ">Welcome to Sfanti Grup Solutions SRL privacy policy.</h4>
-        <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">Sfanti Grup Solutions SRL (“we,
-            us, our, ours, etc.”)
-            is the
-            licensed operator
-            of
-            www.megapersonals.eu and any affiliated websites and related mobile versions and all services provided
-            thereon (“MegaPersonals”). Our goal is to provide a safe, authentic, and law-abiding social introduction
-            platform for our users. To assist in this effort, we require that all users agree to certain terms governing
-            their use of MegaPersonals.</p>
-        <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">These Terms of Use constitute a
-            legal contract that establishes the relationship between you, the user, (“you, your, yours, etc.”) and us as
-            it relates to your access to and use of MegaPersonals, a platform that allows registered users who have
-            passed our strict age verification procedures (“Publishers”) to publish personal classified posts (“Posts”).
-            We are the exclusive licensee of all text, images, graphics, photographs, audio, video, buttons, icons,
-            animations, data, messages, software, content, information, or materials on MegaPersonals (“Materials”),
-            except for the Posts which belong to the Publishers and are licensed to us herein.</p>
-        <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">By accessing or using
-            MegaPersonals, you accept and agree to our website policies, including these Terms of Use, and you certify
-            to us that (a) you are eighteen (18) years of age or older, and are at least the age of majority in your
-            jurisdiction; (b) you have the legal capacity to enter into and agree to these Terms of Use; (c) you are
-            using MegaPersonals freely, voluntarily, willingly, and for your own personal enjoyment; (d) you will only
-            provide accurate and complete information to us and promptly update this information as necessary to
-            maintain its accuracy and completeness; and (e) you are aware of the adult-oriented nature of the content on
-            MegaPersonals, are not offended by adult-oriented content, are familiar and compliant with your
-            jurisdiction’s laws affecting your right to access and publish adult-oriented content.</p>
-
+      <h2 class="mt-[20px] mb-[10px] text-[30px] text-[#6a6969] font-bold text-center">Privacy Policy</h2>
+      <h4 class="mb-[10px] text-[#333] text-[14px ] font-bold">Last Updated: Apr 30, 2024</h4>
+      <h4 class="mb-[10px] text-[#333] text-[14px ] font-bold">Introduction</h4>
+      <h4 class="mb-[10px] text-[#333] text-[14px ]">Welcome to Sfanti Grup Solutions SRL privacy policy.</h4>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        Sfanti Grup Solutions SRL (“we, us, our, ours, etc.”) is the licensed operator of www.megapersonals.eu and any
+        affiliated websites and related mobile versions and all services provided thereon (“MegaPersonals”). Our goal is
+        to provide a safe, authentic, and law-abiding social introduction platform for our users. To assist in this
+        effort, we require that all users agree to certain terms governing their use of MegaPersonals.
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        These Terms of Use constitute a legal contract that establishes the relationship between you, the user, (“you,
+        your, yours, etc.”) and us as it relates to your access to and use of MegaPersonals, a platform that allows
+        registered users who have passed our strict age verification procedures (“Publishers”) to publish personal
+        classified posts (“Posts”). We are the exclusive licensee of all text, images, graphics, photographs, audio,
+        video, buttons, icons, animations, data, messages, software, content, information, or materials on MegaPersonals
+        (“Materials”), except for the Posts which belong to the Publishers and are licensed to us herein.
+      </p>
+      <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">
+        By accessing or using MegaPersonals, you accept and agree to our website policies, including these Terms of Use,
+        and you certify to us that (a) you are eighteen (18) years of age or older, and are at least the age of majority
+        in your jurisdiction; (b) you have the legal capacity to enter into and agree to these Terms of Use; (c) you are
+        using MegaPersonals freely, voluntarily, willingly, and for your own personal enjoyment; (d) you will only
+        provide accurate and complete information to us and promptly update this information as necessary to maintain
+        its accuracy and completeness; and (e) you are aware of the adult-oriented nature of the content on
+        MegaPersonals, are not offended by adult-oriented content, are familiar and compliant with your jurisdiction’s
+        laws affecting your right to access and publish adult-oriented content.
+      </p>
     </div>
 
-    <footer class="pt-[32px] mb-[32px] ">
-        <div class="my-[20px] text-center ">
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Contact Us</a>
-            <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a>
-            </div>
-        </div>
+    <footer class="pt-[32px] mb-[32px]">
+      <div class="my-[20px] text-center">
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Contact Us</a>
+        <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a></div>
+      </div>
 
-        <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
+      <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
     </footer>
-
-</body>
-
+  </body>
 </html>
