--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </style>
   </head>
 
-  <body class="max-w-[600px] mx-auto px-[15px]">
+  <body class="max-w-[600px] mx-auto px-[15px] bg-[#fbfef9]">
     <div class="mt-[20px] grid grid-cols-12">
       <div class="col-span-4">
         <img src="./image/devilgirl.png" alt="model-image" />
@@ -122,7 +122,7 @@
             style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
             class="bg-[#a6a3a3] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"
           >
-            <a href="">Trans</a>
+            <a href="/confirm-user.html">Trans</a>
           </button>
         </div>
       </div>
