--- a/register.html
+++ b/register.html
@@ -1,122 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
     <link href="./dist/styles.css" rel="stylesheet" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
-        rel="stylesheet" />
-</head>
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body class="max-w-[600px] mx-auto">
+  <body class="max-w-[600px] mx-auto bg-[#fbfef9]">
     <div class="w-[72%] mx-auto mt-[38px] mb-[25px]">
-        <img src="./image/megapersonalsPageHeader 1.png" alt="">
+      <img src="./image/megapersonalsPageHeader 1.png" alt="" />
     </div>
     <div>
+      <p class="mt-[7px] mb-[10px] text-center text-[#b7a690] text-[25px] font-medium">Create New Login</p>
+      <div class="flex mx-auto items-center justify-center w-[243px]">
+        <div class="">
+          <input
+            type="text"
+            placeholder="Email"
+            class="border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]"
+          />
 
-        <p class="mt-[7px] mb-[10px] text-center text-[#b7a690] text-[25px] font-medium">Create New Login
-        </p>
-        <div class="flex mx-auto items-center justify-center w-[243px]">
-            <div class="">
+          <input
+            type="password"
+            placeholder="password"
+            class="mt-[8px] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]"
+          />
 
-                <input type="text" placeholder="Email"
-                    class=" border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]">
+          <input
+            type="password"
+            placeholder="Confirm password"
+            class="mt-[8px] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]"
+          />
 
-                <input type="password" placeholder="password"
-                    class="mt-[8px] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]">
-
-                <input type="password" placeholder="Confirm password"
-                    class="mt-[8px] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]">
-
-                <div class="flex items-center gap-[4px] mt-[10px] justify-between">
-                    <!-- CAPTCHA Image -->
-                    <div class="max-w-[200px] border-[2px] border-[#808080] p-[2px] rounded-[4px]">
-                        <img id="captcha-image" src="./image/cp-1.png" alt=""
-                            class="rounded-[2px] w-[191px] max-h-[36px]">
-                    </div>
-                    <!-- Reload Button -->
-                    <div class="cursor-pointer" id="reload-button">
-                        <img src="./image/reloadButton.png" alt="reload-button" class="h-10 w-10 text-[14px]">
-                    </div>
-                </div>
-
-                <input type="password" placeholder="Enter code from the picture"
-                    class="mt-[8px] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]">
-
-                <div class="mt-[10px]">
-                    <label class="flex items-start space-x-2">
-                        <input type="checkbox" required class="mt-1">
-                        <span class="text-[14px] cursor-pointer">
-                            I certify that I am 18 years of age or older, that I am placing ads for myself, under my own
-                            phone number, and that I am abiding by all local laws and regulations.
-                        </span>
-                    </label>
-                </div>
-
-                <div class="flex items-center justify-center">
-
-                    <button
-                        class="bg-[#feb161] text-[20px] text-white mt-[10px] w-[108px] h-[43px] font-bold px-[6px] py-[1px] rounded-[3px]">SUBMIT</button>
-                </div>
-
+          <div class="flex items-center gap-[4px] mt-[10px] justify-between">
+            <!-- CAPTCHA Image -->
+            <div class="max-w-[200px] border-[2px] border-[#808080] p-[2px] rounded-[4px]">
+              <img id="captcha-image" src="./image/cp-1.png" alt="" class="rounded-[2px] w-[191px] max-h-[36px]" />
             </div>
-        </div>
-        <div class="mt-[10px] flex items-center justify-center relative">
-            <img src="./image/bannersContainer.png" class="w-[250px] h-[120px]" alt="">
-            <h1 class="absolute top-5 text-[19px] font-bold uppercase ">Don't get scammed!</h1>
-            <h5 class="absolute left-[180px] top-12 text-[14px] font-bold">Is the address up top:</h5>
-            <h5 class="absolute left-[180px] top-[68px] text-[14px] font-bold">megapersonals.eu</h5>
-            <h3 class="absolute right-[190px] top-8 text-[50px] font-bold">?</h3>
+            <!-- Reload Button -->
+            <div class="cursor-pointer" id="reload-button">
+              <img src="./image/reloadButton.png" alt="reload-button" class="h-10 w-10 text-[14px]" />
+            </div>
+          </div>
 
+          <input
+            type="password"
+            placeholder="Enter code from the picture"
+            class="mt-[8px] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]"
+          />
+
+          <div class="mt-[10px]">
+            <label class="flex items-start space-x-2">
+              <input type="checkbox" required class="mt-1" />
+              <span class="text-[14px] cursor-pointer">
+                I certify that I am 18 years of age or older, that I am placing ads for myself, under my own phone
+                number, and that I am abiding by all local laws and regulations.
+              </span>
+            </label>
+          </div>
+
+          <div class="flex items-center justify-center">
+            <button
+              class="bg-[#feb161] text-[20px] text-white mt-[10px] w-[108px] h-[43px] font-bold px-[6px] py-[1px] rounded-[3px]"
+            >
+              SUBMIT
+            </button>
+          </div>
         </div>
-        <p class="text-[#b8b8b8] text-[14px] text-center mt-[10px] mb-14 hover:underline font-bold"><a
-                href="login.html">Already have an
-                account?</a>
-        </p>
+      </div>
+      <div class="mt-[10px] flex items-center justify-center relative">
+        <img src="./image/bannersContainer.png" class="w-[250px] h-[120px]" alt="" />
+        <h1 class="absolute top-5 text-[19px] font-bold uppercase">Don't get scammed!</h1>
+        <h5 class="absolute left-[180px] top-12 text-[14px] font-bold">Is the address up top:</h5>
+        <h5 class="absolute left-[180px] top-[68px] text-[14px] font-bold">megapersonals.eu</h5>
+        <h3 class="absolute right-[190px] top-8 text-[50px] font-bold">?</h3>
+      </div>
+      <p class="text-[#b8b8b8] text-[14px] text-center mt-[10px] mb-14 hover:underline font-bold">
+        <a href="login.html">Already have an account?</a>
+      </p>
     </div>
 
+    <footer class="mb-[32px]">
+      <div class="my-[20px] text-center">
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Contact Us</a>
+        <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a></div>
+      </div>
 
-    <footer class=" mb-[32px]">
-        <div class="my-[20px] text-center ">
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Contact Us</a>
-            <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a>
-            </div>
-        </div>
-
-        <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
-
+      <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
     </footer>
 
-
     <script>
-        const captchaImages = [
-            "./image/cp-1.png",
-            "./image/cp-2.png",
-            "./image/cp-3.png",
-            "./image/cp-4.png",
-            "./image/cp-5.png",
-            "./image/cp-6.png",
-            "./image/cp-7.png"
-        ];
+      const captchaImages = [
+        "./image/cp-1.png",
+        "./image/cp-2.png",
+        "./image/cp-3.png",
+        "./image/cp-4.png",
+        "./image/cp-5.png",
+        "./image/cp-6.png",
+        "./image/cp-7.png",
+      ];
 
-        const captchaImage = document.getElementById("captcha-image");
-        const reloadButton = document.getElementById("reload-button");
+      const captchaImage = document.getElementById("captcha-image");
+      const reloadButton = document.getElementById("reload-button");
 
-        reloadButton.addEventListener("click", () => {
-            const randomIndex = Math.floor(Math.random() * captchaImages.length);
-            captchaImage.src = captchaImages[randomIndex];
-        });
+      reloadButton.addEventListener("click", () => {
+        const randomIndex = Math.floor(Math.random() * captchaImages.length);
+        captchaImage.src = captchaImages[randomIndex];
+      });
     </script>
-
-</body>
-
+  </body>
 </html>
